// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputPanel Rendering Capitalize value 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 9,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#939393",
          "fontFamily": "Ubuntu",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "letterSpacing": 0.3,
          "lineHeight": 10,
        }
      }
    >
      Counting method
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      Seen
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 8,
      }
    }
  >
    <Icon
      color="#939393"
      name="angle-down"
      size={14}
      type="light"
    />
  </View>
</View>
`;

exports[`InputPanel Rendering Disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 9,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#939393",
          "fontFamily": "Ubuntu",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "letterSpacing": 0.3,
          "lineHeight": 10,
        }
      }
    >
      Counting method
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      seen
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 8,
      }
    }
  >
    <Icon
      color="#939393"
      name="angle-down"
      size={14}
      type="light"
    />
  </View>
</View>
`;

exports[`InputPanel Rendering No label 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      Netherlands
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 8,
      }
    }
  >
    <Icon
      color="#939393"
      name="angle-down"
      size={14}
      type="light"
    />
  </View>
</View>
`;

exports[`InputPanel Rendering No value 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 9,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#939393",
          "fontFamily": "Ubuntu",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "letterSpacing": 0.3,
          "lineHeight": 10,
        }
      }
    >
      Counting method
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
       
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 8,
      }
    }
  >
    <Icon
      color="#939393"
      name="angle-down"
      size={14}
      type="light"
    />
  </View>
</View>
`;

exports[`InputPanel Rendering With content 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 9,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#939393",
          "fontFamily": "Ubuntu",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "letterSpacing": 0.3,
          "lineHeight": 10,
        }
      }
    >
      Counting method
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      seen
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 8,
      }
    }
  >
    <Icon
      color="#939393"
      name="angle-down"
      size={14}
      type="light"
    />
  </View>
</View>
`;

exports[`InputPanel Rendering With value style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 9,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#939393",
          "fontFamily": "Ubuntu",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "letterSpacing": 0.3,
          "lineHeight": 10,
        }
      }
    >
      Counting method
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          {
            "color": "#0066b1",
          },
        ]
      }
    >
      seen
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 8,
      }
    }
  >
    <Icon
      color="#939393"
      name="angle-down"
      size={14}
      type="light"
    />
  </View>
</View>
`;

exports[`InputPanel Rendering Without chevron 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingVertical": 9,
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#939393",
          "fontFamily": "Ubuntu",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "letterSpacing": 0.3,
          "lineHeight": 10,
        }
      }
    >
      Counting method
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      seen
    </Text>
  </View>
</View>
`;
